public class Movies {

    String title;
    String genre;
    int year;
    double rating;

    Movies(String title, String genre, int year, double rating){
        this.title = title;
        this.genre = genre;
        this.year = year;
        this.rating = rating;
    }




}

//The Godfather; 1972; Crime, Drama; 9,2;

