@startuml
'https://plantuml.com/class-diagram

class Main
class Register
class Login
class MainMenu
class Search
class Recommended
class Continue
abstract class  Media
class WatchLater
class Movies
class Series
class LogOut
class Settings
class User
Login*-- User
Chill *-- Register
Chill *-- Login
Register *-- Login

MainMenu *-- Search
MainMenu *-- Recommended
MainMenu *-- WatchLater
MainMenu *-- Continue
Search *-- Media
Recommended *-- Media
WatchLater  *-- Media
Continue *-- Media
Media <|-- Movies
Media <|--Series
MainMenu *-- Settings
Settings *-- LogOut
Settings *-- Login
Main --* Chill
class Chill{
#String Name

}
abstract class Media{
-String genre
-String title
-double rating
#findMedia()
#playMedia()
#addToWatchLater()
#addToSeen()
}
class Series{
-Int episode
-int season
#playMedia()
-selectSeason()
-selectEpisode(int season)
-addToWatchLater()
-addToSeen()
}
class Movies{
- String title
# playMedia()
- addToWatchLater()
- addToSeen()
}

class User{
- String username
getUsername()
setUsername()
FileReader()

}
class MainMenu {
-PromptChoice()
}
class Search{
-SearchForMedia(Name,Genre,Rating)
-aphabetical order();
}
class Recommended {
- Array[String] moviesBeingShown Array [5]
-ShowRandomMovie()
}
class Register{
-String userName
-String password

-createUser()
-PromptTextUserName(username)
-PromptTextPassword(password)
}
class Continue{
-ArrayList<String> moviesSeen
-ArrayList<String> CurrentlyWatching

}
class WatchLater{
-ArrayList<String> WantToWatchLater
+AddToWatchLater()
}

class LogOut{
endSession()
}
class Chill{
-displayMessage()
-promptChoice()
}





class Login{
-String username
-String password
-checkLogin(username,password)

}

class Settings{
-setUsername()
-promptChoice()
-switchUser()
}


package "util"{
class TextUI{
- Scanner scan
+ boolean promptBinary(String msg)
+ String promptText(String msg)
+ int promptNumeric(String msg)
+ ArrayList<String> promptChoice(ArrayList<String> options, int limit, String msg)
+ void displayMessage(String msg)
+ void displayList(ArrayList<String> list, String msg)
}
class FileIO{
+ void saveData(ArrayList<String> data, String path, String header)
+ ArrayList<String> readData(String path)
+ String[] readData(String path, int length)
}
}
Chill -right-* "util"
User -down-* MainMenu

@enduml